--- a/src/Row.css
+++ b/src/Row.css
@@ -1,8 +1,32 @@
+.row{
+    margin-left: 20px;
+}
 .row__posters{
     display: flex;
+    overflow-y: hidden;
+    overflow-x:scroll;
+    padding:20px;
+}
+.row__posters::-webkit-scrollbar{
+    display: none;
 }
 .row__poster{
-    width:100%;
     object-fit: contain;
+    width:100%;
     max-height: 100px;
+    margin-right: 8px;
+    transition: transform 450ms;
+}
+.row__poster:hover{
+    transform:scale(1.08);
+}
+body{
+    background-color: beige;
+}
+
+.row__posterLarge{
+    max-height:250px ;
+}
+.row__posterLarge:hover{
+    transform:scale(1.09);
 }
